# wxTestPad

./: .gitignore  README.md  README_ja.md  meson.build  wxtestpad.cpp  wxtestpad.h
gui/: DialogBase.cpp  DialogBase.h  FindDialog.cpp  FindDialog.h  FindDialog.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  ReplaceDialog.cpp  ReplaceDialog.h  ReplaceDialog.hpp  TpFindDialog.cpp  TpFindDialog.h  TpGUIMainFrame.cpp  TpGUIMainFrame.h  TpMainFrame.cpp  TpMainFrame.h  TpReplaceDialog.cpp  TpReplaceDialog.h  wxTestPadGUI.cpp  wxTestPadGUI.fbp  wxTestPadGUI.h  wxTpGUI.cpp  wxTpGUI.fbp  wxTpGUIMainFrame.cpp  wxTpGUIMainFrame.h
gui/buildergen/: .gitignore  TpGUI.cpp  TpGUI.fbp  TpGUI.h  generatedsample_wxTpGUIMainFrame.h  wxTpGUI.cpp  wxTpGUI.fbp  wxTpGUI.h  wxTpGUIMainFrame.cpp  wxTpGUIMainFrame.h
notepad/: Notepad.cpp  Notepad.h  Notepad.hpp
utilities/: TpLogFormatter.cpp  TpLogFormatter.h  Utils.cpp  Utils.hpp
utilities/logging/: TpLogFormatter.cpp
